--- a/vollmed/api/src/main/resources/application.properties
+++ b/vollmed/api/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=api
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/vollmedapi
 spring.datasource.username= root
-spring.datasource.password=NSAN
+spring.datasource.password=****
